--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "url": "https://github.com/mikemclaren/koa-v2-starter/issues"
   },
   "homepage": "https://github.com/mikemclaren/koa-v2-starter",
-
   "dependencies": {
     "babel-core": "^6.7.6",
     "babel-plugin-syntax-async-functions": "^6.5.0",
@@ -25,6 +24,7 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "koa": "^2.0.0-alpha.3",
+    "koa-bodyparser": "^3.0.0",
     "koa-router": "^7.0.1",
     "supervisor": "^0.10.0"
   }
