--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "PORT=3100 ./node_modules/.bin/supervisor -i node_modules,Dockerfile -- -r 'babel-core/register' server.js"
+    "dev": "PORT=3100 ./node_modules/.bin/supervisor -i node_modules,Dockerfile -- -r 'babel-core/register' server.js"
   },
   "repository": {
     "type": "git",
